# pot-app-translate-plugin-youdao

./: Cargo.toml  README.md  info.json  main.js
.github/workflows/: build.yml
src/: lib.rs
