[package]
name = "plugin"
version = "1.1.0"
authors = ["TechDecryptor"]
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
reqwest = {version="0.11.18",features = ["blocking","json"]}
serde_json = "1.0"
chrono = "0.4.31"
rand = "0.8.5"
hex = "0.4.3"
md-5 = "0.10.6"
base64 = "0.21.5"
openssl = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
openssl={version="0.10",features=["vendored"]}
