[package]
name = "plugin"
version = "1.2.0"
authors = ["TechDecryptor"]
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
reqwest = {version="0.12.4",features = ["blocking","json"]}
serde_json = "1.0"
chrono = "0.4.31"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
aes = "0.8.4"
md-5 = "0.10.6"
cbc = "0.1.2"
